--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,11 @@
 </head>
 <body>
 
+<div class="navibar">
+  <%= link_to 'Apartments', apartments_path %>
+  <%= link_to 'Users', users_path %>
+</div>
+
 <%= yield %>
 
 </body>
