--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
 <div class="navibar">
   <%= link_to 'Apartments', apartments_path %>
   <%= link_to 'Users', users_path %>
+  <%= link_to 'Debts', debts_path %>
 </div>
 
 <%= yield %>
