--- a/app/views/debts/index.html.erb
+++ b/app/views/debts/index.html.erb
@@ -1,3 +1,28 @@
 <h2>List of debts</h2>
 
-<p>diibadaabaaaa</p>
+<table>
+  <thead>
+  <tr>
+    <th>From</th>
+    <th>To</th>
+    <th>Message</th>
+    <th>Amount</th>
+  </tr>
+  </thead>
+
+  <tbody>
+  <% @debts.each do |debt| %>
+      <tr>
+        <td><%= debt.user.name %></td>
+        <td><%= debt.receiver.name %></td>
+        <td><%= debt.description %></td>
+        <td><%= number_to_currency(debt.amount, :unit => "€") %></td>
+        <td><%= link_to 'delete', debt, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+  <% end %>
+  </tbody>
+</table>
+
+<%= link_to 'New Debt', debts_new_path %>
+
+
