--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="field">
     <%= f.label :apartment_id %><br>
-    <%= f.number_field :apartment_id %>
+    <%= f.select :apartment_id, options_from_collection_for_select(@apartments, :id, :name) %>
   </div>
   <div class="actions">
     <%= f.submit %>
